--- a/ckpt3.ipynb
+++ b/ckpt3.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "ee93c038",
    "metadata": {},
    "outputs": [
@@ -106,22 +106,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('item1', '12.20'), ('item2', '15.10'), ('item3', '24.5')]\n"
+      "[('item3', '24.5'), ('item2', '15.10'), ('item1', '12.20')]\n"
      ]
     }
    ],
    "source": [
-    "liste=[('item1', '12.20'), ('item2','15.10'), ('item3', '24.5')]\n",
-    "def last(n): return n[-1]\n",
-    "def sort_list_last(listes): \n",
-    "    return sorted(listes,key=last)\n",
-    "print(sort_list_last(liste))\n"
+    "liste= [('item1', '12.20'), ('item2', '15.10'), ('item3', '24.5')]\n",
+    "def last(n):\n",
+    "    return n[1]\n",
+    "def sort_list_last(listes):\n",
+    "    return sorted(listes,key=last,reverse=True)\n",
+    "print(sort_list_last(liste))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7567a29",
+   "id": "98f9b86d",
    "metadata": {},
    "outputs": [],
    "source": []
